creation deux api pour recuperer des joueurs d'une partie une par id partie et autre par id joueur qui est dans le meme partie
