# Scrabble-BackEnd/routes/api.php
@@ -12,8 +12,14 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 // JoueurController rest api grouped under one controller
 
 Route::controller(JoueurController::class)->prefix("v1")->group(static function () {
-    Route::post("/inscrire", [JoueurController::class, "inscrire"]);
-    Route::get("/joueurs", [JoueurController::class, "getJoueurs"]);
-    Route::get("/joueur/{idJoueur}", [JoueurController::class, "getJoueur"]);
+    Route::post("/inscrire", "inscrire");
+    Route::get("/joueurs","getJoueurs");
+    Route::get("/joueur/{idJoueur}","getJoueur");
 });
+Route::controller(PartieController::class)->prefix("v1")->group(static function () {
+    Route::get("/partie/{idPartie}","getJoueursByIdPartie");
+    Route::get("/partie/joueur/{idJoueur}","getJoueursPartieByIdPlayer");
+});
+
+
 
