# Scrabble-BackEnd/storage/api-docs/api-docs.json
@@ -131,6 +131,78 @@
                     }
                 }
             }
+        },
+        "/v1/partie/{idPartie}": {
+            "get": {
+                "tags": [
+                    "partie"
+                ],
+                "summary": "Trouver les joueurs d'une partie par id partie",
+                "operationId": "getJoueursByIdPartie",
+                "parameters": [
+                    {
+                        "name": "idPartie",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Opération réussie"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "partie inexistant"
+                    }
+                }
+            }
+        },
+        "/v1/partie/joueur/{idJoueur}": {
+            "get": {
+                "tags": [
+                    "partie"
+                ],
+                "summary": "Trouver les joueurs d'une partie par id joueur",
+                "operationId": "getJoueursPartieByIdPlayer",
+                "parameters": [
+                    {
+                        "name": "idJoueur",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Opération réussie"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Joueur inexistant"
+                    }
+                }
+            }
         }
     },
     "components": {
